RCS: @(#) $Id$

2010-03-19  Arnulf P. Wiedemann <wiede@users.sourceforge.net>
	* configure.in:    	add missing include files for install,thanks to Reinhard Max for
	                        the patch
	* itclInfo.c:		removed "uplevel 1" in Itcl_BiInfoUnknownCmd.c, which made problems
	                        with "info complete", reported by Reinhard Max
	* itclMethod.c:		fixed bug, which caused core dump in CallItclObjectCmd, thanks to
	                        Reinhard Max for the patch
2010-03-06  Arnulf P. Wiedemann <wiede@users.sourceforge.net>
	* itcl.decls:    	changed CONST in declarations to const
	* itclDecls.h:
	* itclIntDecls.h
	* itcl2TclOO.c:		adaption to typedef change in TclOO for TclOO_PreCallProc and
				TclOO_PostCallProc
	* itclNeededFromTclOO.h:
	* itclBuiltin.c:	allow installcomponent for ::itcl::type too typeclass.test install-1.7
	* itclClass.c:		use "new" style params in Itcl_FindClass

2009-10-25 Arnulf P. Wiedemann <wiede@users.sf.net>
	* itclCmd.c:            fix for Itcl_AddOptionCmd

2009-10-24 Arnulf P. Wiedemann <wiede@users.sf.net>
	* itclMethod.c:          if during call of constructor, when building
	                         an object there were multiple recursive calls
				 on CallItclObjectCmd and errors have not been
				 propagated. Now hadConstructorError
				 field in ItclObject struct is used for that
				 purpose.
	* itclInt.h:
	* itclObject.c:

	* itclObject.c:          allow %:var_name substitution in delegate
	                         method using part for extendedclass

	* itclObject.c:          allow call of delegated methods in constructor
	                         of ::itcl::extendedclass
	* itclBuiltin.c:
	* itclMethod.c:


2009-10-23 Arnulf P. Wiedemann <wiede@users.sf.net>
        * generic/itcl.h:        bumped version to 4.0b4
	* configure.in:
	* configure:

	* itclClass.c:           fixed bug which prevented correct error
	                         reporting when there was a problem when